--- a/HW4/app/src/main/res/layout/activity_main.xml
+++ b/HW4/app/src/main/res/layout/activity_main.xml
@@ -1,22 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:visibility="visible"
+tools:context=".MainActivity">
+
+
+    android:id="@+id/main_content"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:visibility="visible"
     tools:context=".MainActivity">
+
+
+
+    <TextView
+        android:id="@+id/bearingresult"
+        android:layout_width="205dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="21dp"
+        android:text=" "
+        android:visibility="visible"
+        app:layout_constraintStart_toEndOf="@+id/BearingText"
+        app:layout_constraintTop_toBottomOf="@+id/distanceresult"
+        tools:visibility="visible" />
 
     <EditText
         android:id="@+id/lat1"
         android:layout_width="146dp"
         android:layout_height="40dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="225dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="48dp"
         android:ems="10"
         android:hint="Enter latitude 1"
-        android:inputType="numberDecimal"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:inputType="numberDecimal|numberSigned"
+        app:layout_constraintEnd_toStartOf="@+id/long1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -24,64 +48,99 @@
         android:id="@+id/long2"
         android:layout_width="146dp"
         android:layout_height="40dp"
-        android:layout_marginStart="225dp"
-        android:layout_marginTop="84dp"
-        android:layout_marginEnd="30dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="40dp"
         android:ems="10"
         android:hint="Enter longitude 2"
-        android:inputType="numberDecimal"
+        android:inputType="numberDecimal|numberSigned"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/long1" />
 
     <EditText
         android:id="@+id/long1"
         android:layout_width="146dp"
         android:layout_height="40dp"
-        android:layout_marginStart="225dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="30dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="40dp"
         android:ems="10"
         android:hint="Enter longitude 1"
-        android:inputType="numberDecimal"
+        android:inputType="numberDecimal|numberSigned"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/lat2"
         android:layout_width="146dp"
         android:layout_height="40dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="84dp"
-        android:layout_marginEnd="225dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="24dp"
         android:ems="10"
         android:hint="Enter latitude 2"
-        android:inputType="numberDecimal"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:inputType="numberDecimal|numberSigned"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/lat1" />
 
     <Button
         android:id="@+id/ClearButton"
         android:layout_width="135dp"
         android:layout_height="36dp"
-        android:layout_marginTop="150dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="42dp"
         android:text="Clear"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/long2" />
 
     <Button
         android:id="@+id/CalculateButton"
         android:layout_width="135dp"
         android:layout_height="36dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="150dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="24dp"
         android:text="Calculate"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/lat2" />
+
+    <TextView
+        android:id="@+id/BearingText"
+        android:layout_width="72dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="45dp"
+        android:layout_marginTop="21dp"
+        android:text="Bearing:  "
+        android:visibility="visible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/distanceText"
+        tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/distanceText"
+        android:layout_width="72dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="45dp"
+        android:layout_marginTop="45dp"
+        android:text="Distance: "
+        android:visibility="visible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/CalculateButton"
+        tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/distanceresult"
+        android:layout_width="210dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="45dp"
+        app:layout_constraintStart_toEndOf="@+id/distanceText"
+        app:layout_constraintTop_toBottomOf="@+id/CalculateButton" />
+
+    <Button
+        android:id="@+id/tempbutton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="161dp"
+        android:layout_marginTop="80dp"
+        android:text="tempbutton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bearingresult" />
+
 
 </android.support.constraint.ConstraintLayout>
