--- a/HW4/app/src/main/res/menu/main_menu.xml
+++ b/HW4/app/src/main/res/menu/main_menu.xml
@@ -4,6 +4,5 @@
 
     <item
         android:id="@+id/action_settings"
-        android:title="Settings"
-        app:showAsAction="always" />
+        android:title="Settings" />
 </menu>
